--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <title>Testler</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
